# sdr-fm

./: LICENSE  README.md  angular.json  package-lock.json  package.json
.cursor/skills/rust-pro/: SKILL.md
.cursor/skills/single-responsibility/: SKILL.md
src/: index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  macos_menu.rs  macos_spellcheck.rs  main.rs  sdr.rs
src-tauri/src/config/: mod.rs  stations.rs
src-tauri/src/dsp/: audio.rs  command.rs  flowgraph.rs  linux_audio.rs  linux_audio_sink.rs  mod.rs  silence.rs
src/app/: app.component.css  app.component.html  app.component.ts  fm-stations.ts  station-validator.ts
src/app/components/station-form-modal/: station-form-modal.component.css  station-form-modal.component.html  station-form-modal.component.ts
src/app/models/: fm-station.ts
src/app/services/: station-store.service.ts
