[package]
name = "sdr_fm"
version = "0.1.0"
description = "SDR FM — RTL-SDR wideband FM radio desktop app"
authors = ["Viacheslav Chub <vyacheslav.chub@gmail.com>"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sdr_fm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
futuresdr = { version = "0.0.40", features = ["seify", "soapy", "audio"] }
crossbeam-channel = "0.5"
num-complex = "0.4"
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-foundation = "0.3"

